# dash_ffi_plugin

./: .gitignore  .metadata  README.md  ffigen.yaml  notes.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
ferris_ffi_plugin/: Cargo.toml  Makefile.toml  build.rs  ferris_ffi_plugin.h
ferris_ffi_plugin/src/: c_types.rs  lib.rs  memory_management.rs  stream.rs  util_types.rs
ferris_ffi_plugin/src/c_types/: get_c_char.rs  get_c_double.rs  get_c_float.rs  get_c_int.rs  get_c_long.rs  get_c_longlong.rs  get_c_schar.rs  get_c_short.rs  get_c_uchar.rs  get_c_uint.rs  get_c_ulong.rs  get_c_ulonglong.rs  get_c_ushort.rs  get_c_void.rs  (+1 more)
ios/: dash_ffi_plugin.podspec
lib/: bindings.dart  dash_ffi_plugin.dart  dash_ffi_plugin_bindings_generated.dart  sum_async.dart  sum_sync.dart  utils.dart
lib/async/: async_command_executor.dart  async_sum.dart
lib/stream/: stream.dart
lib/sync/: sync_tasks.dart
linux/: CMakeLists.txt
macos/: dash_ffi_plugin.podspec  libferris_ffi_plugin.dylib
macos/Classes/: dash_ffi_plugin.c
src/: CMakeLists.txt  dash_ffi_plugin.c
test/: async_tasks_test.dart  dash_ffi_plugin_test.dart  sum_sync_test.dart  sync_tasks_test.dart
test/stream/: stream_test.dart
(+6 files in other folders)
